2001-08-16  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: use insert object icons meanwhile

2001-08-15  Radek Doulik  <rodo@ximian.com>

	* toolbar.c (paragraph_style_menu_item_update): added
	GTK_HTML_PARAGRAPH_STYLE_ITEMALPHA

	* GNOME_GtkHTML_Editor.xml.in: plug in new tigert's undo/redo
	icons

	* paragraph.c (paragraph_properties): like below

	* toolbar.c: added Alphabeta item

2001-08-13  Radek Doulik  <rodo@ximian.com>

	* editor-control-factory.c (html_button_pressed): take care of
	selection on button #3 press
	(html_button_pressed): check if clicked point is in selection

	* template.c: added hspace=10 to Note bulb.png

	* menubar.c (menubar_update_format): set sensitivity for InsertTable and
	InsertTemplate

	* popup.c (popup_show): initialize items to 0

	* editor-control-factory.c (html_button_pressed): jump to mouse
	cursor position on button 3
	(editor_api_event): set return value

2001-08-10  Anna Marie Dirks <anna@ximian.com>	
	*search.c : Changed the title of the Regex Find dialog to 
	"Find Regular Expression" as per bug #2658.

2001-08-10  Anna Marie Dirks <anna@ximian.com>
	* GNOME_GtkHTML_Editor.xml.in: Changed label for "Find Regex"
	to "Find Regular Expression (as per bug #2658 ). Also fixed duplicate
	accelerators (Properties and Paste were both using _P, while
	Undo and Cut were both using _U)


2001-08-10  Zbigniew Chyla  <cyba@gnome.pl>

	* popup.c (prepare_properties_and_menu): Marked two strings for
	translation.

2001-08-09  Radek Doulik  <rodo@ximian.com>

	* utils.c: new helper function
	(our_gnome_pixmap_entry_set_last_pixmap): new helper function
	(our_gnome_pixmap_entry_set_last_dir): ditto

	* test-html-editor-control.c (container_create): use grab-focus
	command

	* table.c (table_widget): fix for GnomePixmapEntry + set last dir

	* image.c (image_widget): new extracted function
	(image_insertion): use image_widget
	(image_properties): ditto
	(image_widget): fix for GnomePixmapEntry + set last dir
